--- a/css/main.css
+++ b/css/main.css
@@ -363,7 +363,7 @@
 }
 
 .card {
-  min-height: 24vh;
+  min-height: 33vh;
   text-transform: uppercase;
   position: relative;
   font-family: "RobotoCondensed-Light-grid";
@@ -434,6 +434,7 @@
   bottom: 33%;
   color: #fefefe;
   font-size: 48px;
+  font-weight: normal;
 }
 
 .project-card::after {
@@ -659,6 +660,174 @@
   overflow: hidden;
 }
 
+.studio-section {
+  display: grid;
+  grid-template-rows: minmax(1fr, 465px) 1fr 1fr;
+  grid-row-gap: 65px;
+  grid-template-columns: minmax(200px, 465fr) 300fr 200px 100fr 300fr;
+  grid-template-areas: 'studio article article awards awards' 'staff starck bellini bellini patricia' 'staff starck bellini bellini patricia';
+  padding: 0 165px 0 0;
+  background: #e9eae2;
+}
+
+.studio-card {
+  grid-area: studio;
+  background: #ff9b6d;
+  font-family: "RobotoCondensed-Regular-grid";
+}
+
+.studio-card__title {
+  position: absolute;
+  right: 10%;
+  bottom: 33%;
+  color: #fefefe;
+  font-size: 48px;
+  font-weight: normal;
+  transition: transform 0.7s;
+}
+
+.article-card {
+  grid-area: article;
+  font-size: 18px;
+  padding: 95px 30px 70px 22%;
+}
+
+.article-card__cite-bold {
+  font-family: "RobotoCondensed-BoldItalic-grid";
+}
+
+.article-card__cite {
+  font-family: "RobotoCondensed-Light-grid";
+}
+
+.awards-card {
+  grid-area: awards;
+  padding-top: 95px;
+  text-transform: uppercase;
+}
+
+.awards-card__image {
+  display: block;
+  max-width: 370px;
+  width: 100%;
+}
+
+.awards-card__title {
+  font-family: "RobotoCondensed-Bold-grid";
+  font-size: 14px;
+}
+
+.awards-card__list-wrap {
+  display: flex;
+}
+
+.awards-card__list {
+  display: block;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  font-family: "RobotoCondensed-Regular-grid";
+  font-size: 12px;
+}
+
+.awards-card__list:nth-child(1) {
+  margin-right: 30px;
+}
+
+.staff-card {
+  grid-area: staff;
+  padding: 60px 30px 80px 35%;
+  font-size: 14px;
+}
+
+.staff-card__title {
+  font-family: "RobotoCondensed-Regular-grid";
+  text-transform: uppercase;
+}
+
+.staff-card__article {
+  font-family: "RobotoCondensed-Light-grid";
+}
+
+.personal-card {
+  display: block;
+}
+
+.personal-card__image {
+  display: block;
+  max-width: 270px;
+  width: 100%;
+  height: auto;
+}
+
+.personal-card__name {
+  margin-bottom: 1px;
+  font-family: "RobotoCondensed-Bold-grid";
+  font-size: 13px;
+}
+
+.personal-card__position {
+  margin-top: 1px;
+  font-family: "RobotoCondensed-Regular-grid";
+  font-size: 12px;
+}
+
+.personal-card__socials {
+  display: flex;
+  max-width: 270px;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.socials__cv {
+  margin-right: auto;
+  font-size: 22px;
+  color: #fd5000;
+  font-family: "RobotoCondensed-Regular-grid";
+}
+
+.socials-ico {
+  display: block;
+  width: 14px;
+  height: 14px;
+  margin-top: 10px;
+}
+
+.facebook {
+  background: url(../img/studio-section/social-icons/facebook-icon.png) center center no-repeat;
+  background-size: contain;
+}
+
+.twitter {
+  background: url(../img/studio-section/social-icons/twitter-icon.png) center center no-repeat;
+  background-size: contain;
+  margin-left: 15px;
+}
+
+.linkedin {
+  background: url(../img/studio-section/social-icons/linkedin-icon.png) center center no-repeat;
+  background-size: contain;
+  margin-left: 15px;
+}
+
+.google-pl {
+  background: url(../img/studio-section/social-icons/gp-icon.png) center center no-repeat;
+  background-size: contain;
+  margin-left: 15px;
+}
+
+.starck-card {
+  grid-area: starck;
+}
+
+.bellini-card {
+  grid-area: bellini;
+}
+
+.patricia-card {
+  grid-area: patricia;
+}
+
 @media screen and (max-width: 1200px) {
   .un-card__title {
     position: absolute;
@@ -750,9 +919,16 @@
     top: 30%;
     left: 78%;
   }
+  .studio-card__title {
+    transform: rotate(90deg);
+  }
+  .staff-card {
+    padding-left: 7%;
+    padding-top: 5%;
+  }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 940px) {
   .projects-section {
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr;
@@ -884,6 +1060,29 @@
     top: 20%;
     left: 12%;
   }
+  .studio-section {
+    grid-template-rows: 1fr 1fr 2fr;
+    grid-row-gap: 65px;
+    grid-column-gap: 15px;
+    grid-template-columns: minmax(80px, 1fr) 2fr 2fr;
+    grid-template-areas: 'studio staff bellini' 'studio starck patricia' 'article article awards';
+    padding: 0;
+  }
+  .article-card {
+    padding: 30px;
+  }
+  .awards-card {
+    padding: 30px;
+  }
+  .starck-card {
+    padding: 10px;
+  }
+  .bellini-card {
+    padding: 10px;
+  }
+  .patricia-card {
+    padding: 0 20px;
+  }
 }
 
 @media screen and (max-width: 730px) {
@@ -911,7 +1110,7 @@
   }
 }
 
-@media screen and (max-width: 530px) {
+@media screen and (max-width: 550px) {
   .projects-section {
     grid-template-rows: 2fr 2fr 2fr 2fr 1fr 2fr 1fr 1fr 1fr 2fr;
     grid-template-columns: 1fr;
@@ -931,5 +1130,41 @@
     position: absolute;
     top: 58.3%;
     left: 68%;
+  }
+  .studio-section {
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    grid-gap: 10px;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-areas: 'studio' 'staff' 'awards' 'starck' 'bellini' 'patricia' 'article';
+    margin: 0;
+    padding: 0;
+  }
+  .studio-card {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+  .studio-card__title {
+    transform: rotate(0deg);
+  }
+  .article-card {
+    margin: 0;
+    padding: 0 20px;
+  }
+  .awards-card {
+    margin: 0;
+    padding: 0;
+  }
+  .awards-card__list:nth-child(1) {
+    margin: 0;
+    padding: 0;
+  }
+  .staff-card {
+    margin: 0;
+    padding: 0 20px;
   }
 }
