--- a/css/main.css
+++ b/css/main.css
@@ -357,7 +357,7 @@
 
 .projects-section {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1.3fr;
   grid-template-columns: minmax(230px, 300fr) 165fr 270fr 300fr minmax(300px, 465fr);
   grid-template-areas: 'project project fondue fondue potter' 'project project fondue fondue tabano' 'louis number number number tabano' 'louis number number number fiji' 'sesann sesann sesann alessi timeline';
 }
@@ -664,7 +664,7 @@
   display: grid;
   grid-template-rows: minmax(1fr, 465px) 1fr 1fr;
   grid-row-gap: 65px;
-  grid-template-columns: minmax(200px, 465fr) 300fr 200px 100fr 300fr;
+  grid-template-columns: minmax(200px, 465fr) 300fr 200fr 100fr 300fr;
   grid-template-areas: 'studio article article awards awards' 'staff starck bellini bellini patricia' 'staff starck bellini bellini patricia';
   padding: 0 165px 0 0;
   background: #e9eae2;
@@ -715,6 +715,7 @@
 .awards-card__title {
   font-family: "RobotoCondensed-Bold-grid";
   font-size: 14px;
+  font-weight: normal;
 }
 
 .awards-card__list-wrap {
@@ -764,6 +765,7 @@
   margin-bottom: 1px;
   font-family: "RobotoCondensed-Bold-grid";
   font-size: 13px;
+  font-weight: normal;
 }
 
 .personal-card__position {
