--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -372,15 +372,7 @@
 
 	.awards-card {
 		margin: 0;
-		padding: 0;
-
-		&__list {
-
-			&:nth-child(1) {
-				margin: 0;
-				padding: 0;
-			}
-		}
+		padding: 0 20px;
 	}
 
 	.staff-card {
