--- a/sass/main.scss
+++ b/sass/main.scss
@@ -534,6 +534,7 @@
 	grid-area: studio;
 	background: #ff9b6d;
 	font-family: $robotoCR;
+	color: #333333;
 
 	&__title {
 		position: absolute;
@@ -689,5 +690,85 @@
 .patricia-card {
 	grid-area: patricia;
 }
+
+// ########## news section
+
+.news-section {
+	display: grid;
+	grid-template-rows: minmax(50vh, 1fr);
+	grid-template-columns: 465fr 100fr minmax(260px, 370fr) 30fr minmax(260px, 370fr) 130fr;
+	background: #e5e9df;
+}
+
+.news-card {
+	position: relative;
+	background: #d4edbf;
+	grid-column: 0;
+
+	&__title {
+		position: absolute;
+		right: 10%;
+		bottom: 33%;
+		color: #fefefe;
+		font-size: 48px;
+		font-weight: normal;
+		transition: transform 0.7s;
+	}
+}
+
+.news-block{
+	position: relative;
+	font-family: $robotoCR;
+	font-size: 12px;
+	color: #6a6969;
+
+	&__title {
+		position: absolute;
+		top: 65px;
+		margin: 0;
+		font-family: $robotoCBold;
+		font-weight: normal;
+		font-size: 24px;
+		color: #333333;
+	}
+	&__date {
+		position: absolute;
+		top: 130px;
+		display: block;
+		
+	}
+	&__image {
+		position: absolute;
+		top: 160px;
+		display: block;
+		width: 100%;
+		max-width: 370px;
+		height: auto;
+	}
+	&__text {
+		position: absolute;
+		top: 74%;
+	}
+	&__link {
+		position: absolute;
+		top: 89%;
+		right: 5px;
+		display: block;
+		text-decoration: none;
+		text-transform: uppercase;
+		color: #fd5000;
+		
+	}
+}
+
+.first-news {
+	grid-column: 3;
+}
+
+.last-news {
+	grid-column: 5;
+}
+
+
 
 @import 'media';
