--- a/css/main.css
+++ b/css/main.css
@@ -674,6 +674,7 @@
   grid-area: studio;
   background: #ff9b6d;
   font-family: "RobotoCondensed-Regular-grid";
+  color: #333333;
 }
 
 .studio-card__title {
@@ -828,6 +829,84 @@
 
 .patricia-card {
   grid-area: patricia;
+}
+
+.news-section {
+  display: grid;
+  grid-template-rows: minmax(50vh, 1fr);
+  grid-template-columns: 465fr 100fr minmax(260px, 370fr) 30fr minmax(260px, 370fr) 130fr;
+  background: #e5e9df;
+}
+
+.news-card {
+  position: relative;
+  background: #d4edbf;
+  grid-column: 0;
+}
+
+.news-card__title {
+  position: absolute;
+  right: 10%;
+  bottom: 33%;
+  color: #fefefe;
+  font-size: 48px;
+  font-weight: normal;
+  transition: transform 0.7s;
+}
+
+.news-block {
+  position: relative;
+  font-family: "RobotoCondensed-Regular-grid";
+  font-size: 12px;
+  color: #6a6969;
+}
+
+.news-block__title {
+  position: absolute;
+  top: 65px;
+  margin: 0;
+  font-family: "RobotoCondensed-Bold-grid";
+  font-weight: normal;
+  font-size: 24px;
+  color: #333333;
+}
+
+.news-block__date {
+  position: absolute;
+  top: 130px;
+  display: block;
+}
+
+.news-block__image {
+  position: absolute;
+  top: 160px;
+  display: block;
+  width: 100%;
+  max-width: 370px;
+  height: auto;
+}
+
+.news-block__text {
+  position: absolute;
+  top: 74%;
+}
+
+.news-block__link {
+  position: absolute;
+  top: 89%;
+  right: 5px;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fd5000;
+}
+
+.first-news {
+  grid-column: 3;
+}
+
+.last-news {
+  grid-column: 5;
 }
 
 @media screen and (max-width: 1200px) {
@@ -1164,5 +1243,45 @@
   .staff-card {
     margin: 0;
     padding: 0 20px;
+  }
+  .news-section {
+    justify-items: center;
+    grid-row-gap: 40px;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: minmax(150px, 1fr);
+    grid-template-areas: 'title' 'first-news' 'last-news';
+  }
+  .news-card {
+    width: 100%;
+    height: 100%;
+    grid-area: title;
+    grid-row: 1;
+  }
+  .news-block {
+    padding: 0 40px;
+    position: static;
+  }
+  .news-block__title {
+    position: static;
+  }
+  .news-block__date {
+    position: static;
+  }
+  .news-block__image {
+    position: static;
+  }
+  .news-block__text {
+    position: static;
+  }
+  .news-block__link {
+    position: static;
+  }
+  .first-news {
+    grid-area: first-news;
+    grid-row: 2;
+  }
+  .last-news {
+    grid-area: last-news;
+    grid-row: 3;
   }
 }
