fixed news section, added line, optimized nav menu

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@
   src: url(../fonts/font-awesome/FontAwesome.otf) format("OpenType");
 }
 
-.project-card::after, .timeline-card::after, .nav-menu__item-1, .nav-menu__item-2, .nav-menu__item-3, .nav-menu__item-4, .nav-menu__item-5, .menu__left-item, .menu__right-item, .nav-menu, .nav-menu__item-base {
+.timeline-card::after, .nav-menu__item-1, .nav-menu__item-2, .nav-menu__item-3, .nav-menu__item-4, .nav-menu__item-5, .menu__left-item, .menu__right-item, .nav-menu, .nav-menu__item-base {
   display: block;
   position: absolute;
 }
@@ -108,7 +108,7 @@
   padding: 0;
 }
 
-.project-card::after, .timeline-card::after {
+.timeline-card::after {
   content: '';
   left: 0%;
   bottom: 0%;
@@ -232,7 +232,8 @@
   position: relative;
   display: block;
   width: 100%;
-  background: #7acec3;
+  background: #7acec3 url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="100%" x2="100%" y2="0" stroke="#fff" stroke-width="1"/></svg>');
+  background-size: cover;
   grid-column: 6;
 }
 
@@ -264,7 +265,7 @@
 
 .nav-menu {
   cursor: pointer;
-  right: 31.5%;
+  right: 36%;
   top: 10%;
   width: 80px;
   height: 80px;
@@ -416,9 +417,9 @@
 }
 
 .project-card {
-  overflow: hidden;
   grid-area: project;
-  background: #ebb240;
+  background: #ebb240 url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="100%" x2="100%" y2="0" stroke="#fff" stroke-width="1"/></svg>');
+  background-size: cover;
   font-family: "RobotoCondensed-Regular-grid";
 }
 
@@ -435,10 +436,6 @@
   color: #fefefe;
   font-size: 48px;
   font-weight: normal;
-}
-
-.project-card::after {
-  overflow: hidden;
 }
 
 .fondue-card {
@@ -672,7 +669,8 @@
 
 .studio-card {
   grid-area: studio;
-  background: #ff9b6d;
+  background: #ff9b6d url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="100%" x2="100%" y2="0" stroke="#fff" stroke-width="1"/></svg>');
+  background-size: cover;
   font-family: "RobotoCondensed-Regular-grid";
   color: #333333;
 }
@@ -833,14 +831,16 @@
 
 .news-section {
   display: grid;
-  grid-template-rows: minmax(50vh, 1fr);
-  grid-template-columns: 465fr 100fr minmax(260px, 370fr) 30fr minmax(260px, 370fr) 130fr;
+  grid-row-gap: 65px;
+  grid-template-rows: minmax(500px, 1fr);
+  grid-template-columns: 465fr 100fr minmax(370px, 370fr) 30fr minmax(370px, 370fr) 130fr;
   background: #e5e9df;
 }
 
 .news-card {
   position: relative;
-  background: #d4edbf;
+  background: #d4edbf url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="100%" x2="100%" y2="0" stroke="#fff" stroke-width="1"/></svg>');
+  background-size: cover;
   grid-column: 0;
 }
 
@@ -863,7 +863,7 @@
 
 .news-block__title {
   position: absolute;
-  top: 65px;
+  top: 80px;
   margin: 0;
   font-family: "RobotoCondensed-Bold-grid";
   font-weight: normal;
@@ -888,12 +888,12 @@
 
 .news-block__text {
   position: absolute;
-  top: 74%;
+  top: 360px;
 }
 
 .news-block__link {
   position: absolute;
-  top: 89%;
+  top: 425px;
   right: 5px;
   display: block;
   text-decoration: none;
@@ -1164,6 +1164,48 @@
   .patricia-card {
     padding: 0 20px;
   }
+  .news-section {
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+    grid-row-gap: 40px;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: minmax(150px, 400px);
+    grid-template-areas: 'title' 'first-news' 'last-news';
+  }
+  .news-card {
+    width: 100%;
+    height: 100%;
+    grid-area: title;
+    grid-row: 1;
+  }
+  .news-block {
+    padding: 0 40px;
+    position: static;
+  }
+  .news-block__title {
+    position: static;
+  }
+  .news-block__date {
+    position: static;
+  }
+  .news-block__image {
+    position: static;
+  }
+  .news-block__text {
+    position: static;
+  }
+  .news-block__link {
+    position: static;
+  }
+  .first-news {
+    grid-area: first-news;
+    grid-row: 2;
+  }
+  .last-news {
+    grid-area: last-news;
+    grid-row: 3;
+  }
 }
 
 @media screen and (max-width: 730px) {
@@ -1188,6 +1230,46 @@
   }
   .menu__contacts {
     left: 42%;
+  }
+  .nav-menu__item-1 {
+    top: 0;
+    left: -100%;
+    transform: translateX(0);
+  }
+  .nav-menu:hover .nav-menu__item-1 {
+    transform: translateX(0);
+  }
+  .nav-menu__item-2 {
+    top: 100%;
+    left: 0;
+    transform: translateX(0);
+  }
+  .nav-menu:hover .nav-menu__item-2 {
+    transform: translateX(0);
+  }
+  .nav-menu__item-3 {
+    top: 100%;
+    left: -100%;
+    transform: translateX(0);
+  }
+  .nav-menu:hover .nav-menu__item-3 {
+    transform: translateY(0);
+  }
+  .nav-menu__item-4 {
+    top: 200%;
+    left: 0;
+    transform: translateX(0);
+  }
+  .nav-menu:hover .nav-menu__item-4 {
+    transform: translateY(0);
+  }
+  .nav-menu__item-5 {
+    top: 200%;
+    left: -100%;
+    transform: translateX(0);
+  }
+  .nav-menu:hover .nav-menu__item-5 {
+    transform: translateY(0);
   }
 }
 
@@ -1243,45 +1325,5 @@
   .staff-card {
     margin: 0;
     padding: 0 20px;
-  }
-  .news-section {
-    justify-items: center;
-    grid-row-gap: 40px;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: minmax(150px, 1fr);
-    grid-template-areas: 'title' 'first-news' 'last-news';
-  }
-  .news-card {
-    width: 100%;
-    height: 100%;
-    grid-area: title;
-    grid-row: 1;
-  }
-  .news-block {
-    padding: 0 40px;
-    position: static;
-  }
-  .news-block__title {
-    position: static;
-  }
-  .news-block__date {
-    position: static;
-  }
-  .news-block__image {
-    position: static;
-  }
-  .news-block__text {
-    position: static;
-  }
-  .news-block__link {
-    position: static;
-  }
-  .first-news {
-    grid-area: first-news;
-    grid-row: 2;
-  }
-  .last-news {
-    grid-area: last-news;
-    grid-row: 3;
   }
 }
