--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -47,3 +47,9 @@ $robotoCBold: 'RobotoCondensed-Bold-grid';
 	top: $top;
 	left: $left;
 }
+
+@mixin menu-items($top, $left) {
+	top: $top;
+	left: $left;
+	transform: translateX(0);
+}
