--- a/sass/main.scss
+++ b/sass/main.scss
@@ -108,7 +108,8 @@
 	position: relative;
 	display: block;
 	width: 100%;
-	background: #7acec3;
+	background: #7acec3 url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="100%" x2="100%" y2="0" stroke="#fff" stroke-width="1"/></svg>');
+ 	 background-size: cover;
 	grid-column: 6;
 
 	&__left-item {
@@ -149,11 +150,10 @@
 .nav-menu {
 	@extend %pos_absolute-block;
 	cursor: pointer;
-	right: 31.5%;
+	right: 36%;
 	top: 10%;
 	width: 80px;
 	height: 80px;
-	// display: flex;
 
 	&__item-base {
 		@extend %pos_absolute-block;
@@ -323,9 +323,9 @@
 // ### end card ###
 
 .project-card {
-	overflow: hidden;
 	grid-area: project;
-	background: #ebb240;
+	background: #ebb240 url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="100%" x2="100%" y2="0" stroke="#fff" stroke-width="1"/></svg>');
+  	background-size: cover;
 	font-family: $robotoCR;
 	
 	&__list {
@@ -339,11 +339,6 @@
 		color: #fefefe;
 		font-size: 48px;
 		font-weight: normal;
-	}
-
-	&::after {
-		overflow: hidden;
-		@extend %inclined_line;
 	}
 }
 
@@ -532,7 +527,8 @@
 
 .studio-card {
 	grid-area: studio;
-	background: #ff9b6d;
+	background: #ff9b6d url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="100%" x2="100%" y2="0" stroke="#fff" stroke-width="1"/></svg>');
+	background-size: cover;
 	font-family: $robotoCR;
 	color: #333333;
 
@@ -695,14 +691,16 @@
 
 .news-section {
 	display: grid;
-	grid-template-rows: minmax(50vh, 1fr);
-	grid-template-columns: 465fr 100fr minmax(260px, 370fr) 30fr minmax(260px, 370fr) 130fr;
+	grid-row-gap: 65px;
+	grid-template-rows: minmax(500px, 1fr);
+	grid-template-columns: 465fr 100fr minmax(370px, 370fr) 30fr minmax(370px, 370fr) 130fr;
 	background: #e5e9df;
 }
 
 .news-card {
 	position: relative;
-	background: #d4edbf;
+	background: #d4edbf url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><line x1="0" y1="100%" x2="100%" y2="0" stroke="#fff" stroke-width="1"/></svg>');
+	background-size: cover;
 	grid-column: 0;
 
 	&__title {
@@ -724,7 +722,7 @@
 
 	&__title {
 		position: absolute;
-		top: 65px;
+		top: 80px;
 		margin: 0;
 		font-family: $robotoCBold;
 		font-weight: normal;
@@ -747,11 +745,11 @@
 	}
 	&__text {
 		position: absolute;
-		top: 74%;
+		top: 360px;
 	}
 	&__link {
 		position: absolute;
-		top: 89%;
+		top: 425px;
 		right: 5px;
 		display: block;
 		text-decoration: none;
